Change justify-content for mobile view, adjust padding & gap accordingly

--- a/style.css
+++ b/style.css
@@ -106,6 +106,9 @@ h3 {
 
   .card-conversion {
     height: 60vh;
+    padding-top: 3em;
+    justify-content: flex-start;
+    gap: 3em;
   }
 
   .card-input, .card-conversion {
