--- a/style.css
+++ b/style.css
@@ -10,13 +10,12 @@ body {
 }
 
 .main-container {
-  width: 100vw;
-  height: 100vh;
-  background-color: #0c163b;
-  background-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff;
 }
 
 .card-container {
@@ -25,55 +24,38 @@ body {
   align-items: center;
   flex-direction: column;
   width: 650px;
-  height: 80vh;
+  height: 600px;
 }
 
 .card-input,
 .card-conversion {
   display: flex;
-  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  color: #fff;
+  flex-direction: column;
   width: 100%;
+  color: #fff;
+  text-align: center;
 }
 
 .card-input {
-  height: 35vh;
+  height: 250px;
   background: linear-gradient(246.26deg, #585dfe 0%, #fb3796 100%);
   border-radius: 1em 1em 0 0;
 }
 
-.card-conversion {
-  height: 45vh;
-  background: #1f2937;
-  border-radius: 0 0 1em 1em;
-}
-
-.card-conversion > * {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.card-container div p {
-  color: #d2d2d2;
-}
-
 .card-headline {
-  font-size: 1.8rem;
   text-transform: uppercase;
-  text-align: center;
+  font-size: 1.8rem;
 }
 
 .form input {
   width: 8em;
   height: 3em;
   padding: 0.5em;
-  border-radius: 0.5em;
   font-size: 2rem;
   text-align: center;
+  border-radius: 0.5em;
   border: none;
   cursor: text;
 }
@@ -82,21 +64,35 @@ body {
   color: transparent;
 }
 
-/* Hide the spin-button inside input */
-.form input[type=number]::-webkit-inner-spin-button, 
-.form input[type=number]::-webkit-outer-spin-button {
+/* 
+  Hide the spin-button inside input - Chrome, Safari, Edge, Opera.
+  NOTE: This feature is non-standard and should not be used without careful consideration.
+  https://developer.mozilla.org/en-US/docs/Web/CSS/::-webkit-inner-spin-button
+*/
+.form input[type='number']::-webkit-inner-spin-button {
   display: none;
 }
 
-/* Hide the spin-button inside input for Mozilla */
-.form input[type=number] {
+/* Hide the spin-button inside input - Firefox */
+.form input[type='number'] {
   -moz-appearance: textfield;
 }
 
-h3 {
-  margin-bottom: 0.25em;
+.card-conversion {
+  height: 350px;
+  background: #1f2937;
+  border-radius: 0 0 1em 1em;
 }
 
+.card-conversion h3 {
+  margin-bottom: 0.25em;
+  font-size: 1.2rem;
+}
+
+.card-conversion div p {
+  color: #d2d2d2;
+  font-size: 1.1rem;
+}
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 799.98px) {
@@ -105,18 +101,31 @@ h3 {
     height: 100vh;
   }
 
+  .card-input,
+  .card-conversion {
+    border-radius: 0;
+  }
+
   .card-input {
     height: 40vh;
   }
 
+  .card-headline {
+    padding: 0 0.5em;
+  }
+
   .card-conversion {
-    height: 60vh;
-    padding-top: 3em;
     justify-content: flex-start;
+    height: 60vh;
+    padding: 3em 1em 0;
     gap: 3em;
   }
 
-  .card-input, .card-conversion {
-    border-radius: 0;
+  .card-conversion h3 {
+    font-size: 1.1rem;
+  }
+
+  .card-conversion div p {
+    font-size: 1rem;
   }
 }
